--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.48.1",
 		"vite": "^7.2.6"
+	},
+	"dependencies": {
+		"@lucide/svelte": "^0.562.0",
+		"gsap": "^3.14.2"
 	}
 }
